# meditations

./: Cargo.toml
data/: marcus.txt  meditations.txt  seneca.txt
src/: main.rs
