[package]
name = "meditations"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["cli", "stoic", "stdout"]
categories = ["command-line-utilities"]
authors = ["Michael Swisher"]
description = "Print a random meditation to standard output"
homepage = "https://github.com/mtswishr/meditations"


[dependencies]
rand = "0.8.5"
